# internal/switauth/handler/health.go
@@ -29,13 +29,14 @@ import (
 )
 
 // HealthHandler checks if the authentication service is healthy
-// @Summary Health check
-// @Description Check if the authentication service is healthy
-// @Tags health
-// @Accept json
-// @Produce json
-// @Success 200 {object} model.HealthResponse "Service is healthy"
-// @Router /health [get]
+//
+//	@Summary		Health check
+//	@Description	Check if the authentication service is healthy
+//	@Tags			health
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	model.HealthResponse	"Service is healthy"
+//	@Router			/health [get]
 func HealthHandler(c *gin.Context) {
 	c.JSON(http.StatusOK, model.HealthResponse{
 		Message: "pong",
